--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-image-file-resizer": "^0.4.8",
     "react-intersection-observer": "^9.10.3",
     "react-linkify-it": "^1.0.8",
+    "sonner": "^2.0.5",
     "stream-chat": "^8.37.0",
     "stream-chat-react": "^11.23.0",
     "tailwind-merge": "^2.4.0",
