--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
   },
   "dependencies": {
     "@ai-sdk/google": "^1.2.19",
+    "@ai-sdk/openai": "^1.3.22",
+    "@ai-sdk/react": "^1.2.12",
     "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^3.9.0",
+    "@jitsi/react-sdk": "^1.4.4",
     "@lucia-auth/adapter-prisma": "^4.0.1",
     "@prisma/client": "^5.16.1",
     "@radix-ui/react-dialog": "^1.1.1",
@@ -36,9 +39,10 @@
     "@tiptap/pm": "^2.4.0",
     "@tiptap/react": "^2.4.0",
     "@tiptap/starter-kit": "^2.4.0",
-    "@uploadthing/react": "^6.7.2",
+    "@uploadthing/react": "^7.3.1",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
+    "@zegocloud/zego-uikit-prebuilt": "^2.15.0",
     "ai": "^4.3.16",
     "arctic": "^1.9.1",
     "class-variance-authority": "^0.7.0",
@@ -51,6 +55,7 @@
     "lucide-react": "^0.402.0",
     "next": "15.0.0-rc.0",
     "next-themes": "^0.3.0",
+    "openai": "^5.5.1",
     "prisma": "^5.16.1",
     "react": "19.0.0-rc-f994737d14-20240522",
     "react-cropper": "^2.3.3",
@@ -64,7 +69,7 @@
     "stream-chat-react": "^11.23.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
-    "uploadthing": "^6.13.2",
+    "uploadthing": "^7.7.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
